--- a/app/views/users/like.html.haml
+++ b/app/views/users/like.html.haml
@@ -63,9 +63,9 @@
               .article_area
                 .my_picture
                   - if article.user.image.blank?
-                    = image_tag "no-image.png", size: "48x48", alt:""
+                    = image_tag "no-image.png", size: "48x48", alt:"", class: "author-avatar"
                   - else
-                    = image_tag "#{current_user.image}", size: "48x48", alt:"プロフ画"
+                    = image_tag "#{current_user.image}", size: "48x48", alt:"プロフ画", class: "author-avatar"
                 .article
                   .article__data
                     %span.author-name
