--- a/app/assets/stylesheets/_mypage_like.scss
+++ b/app/assets/stylesheets/_mypage_like.scss
@@ -39,6 +39,9 @@
       float: left;
       margin-right: 10px;
       cursor: pointer;
+      .author-avatar {
+      border-radius: .2em;
+      }
     }
     .article{
       &__data{
