--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -55,7 +55,7 @@
           - articles.each do |article|
             .article-tag
               .author-avatar
-                - if article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+                - if article.user.image.blank?
                   = image_tag "no-image.png", class: "avatar", alt:""
                 - else
                   = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
@@ -86,7 +86,7 @@
           - articles.each do |article|
             .article-tag
               .author-avatar
-                - if article.user.image != "/uploads/user/image/#{current_user.id}/no-image"
+                - if article.user.image.blank?
                   = image_tag "no-image.png", class: "avatar", alt:""
                 - else
                   = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
