editing production.rb

--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -32,7 +32,7 @@
           .home {
             height: 20px;
             width: 57px;
-            background-image: url(home_off.png);
+            background-image: image-url(home_off.png);
             background-size: 57px 20px;
             margin-left: 50px;
             margin-top: 4px;
