--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -39,7 +39,10 @@
                 - if article.user == @user
                   - count << article.id
                   - number = count.length
-              = number
+              - if number.blank?
+                =0
+              - else
+                = number
             .count-title
               Items
           %li
