--- a/app/views/articles/stocks.html.haml
+++ b/app/views/articles/stocks.html.haml
@@ -17,7 +17,7 @@
           - if stock.article.user.image.blank?
             = image_tag "no-image.png", class: "avatar", alt:""
           - else
-            = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
+            = image_tag "#{stock.article.image}", class: "avatar", alt:"プロフ画"
         .content
           .author
             %span.author-name
