--- a/app/assets/stylesheets/_tag_feed.scss
+++ b/app/assets/stylesheets/_tag_feed.scss
@@ -1,11 +1,11 @@
-.trend{
+.tag_feed{
   font-size: 1.4rem;
   color: #333;
- // box-sizing: inherit;
- // display: inline;
+  box-sizing: inherit;
+  display: inline;
 
   .allWrapper{
-    background-color: #f6f6f6;
+    background-color: #f6f6f6;;
     min-height: 200vh;
 
     .container1{
@@ -31,13 +31,13 @@
         padding-left: 110px;
 
         .menu-items1{
-          padding-left: 18px;
+          padding-left: 16px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
-          font-weight: 400;
-          color: #fff;
-          background-color: #55c500;
+          font-weight: 600;
+          color: gray;
+          background-color: #f6f6f6;
           border-top-left-radius: 3px;
           border-bottom-left-radius: 3px;
           width: 92%;
@@ -46,13 +46,13 @@
         }
 
         .menu-items2{
-          padding-left: 18px;
+          padding-left: 16px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
           font-weight: 600;
           color: gray;
-          background-color: #f6f6f6;;
+          background-color: #f6f6f6;
           border-top-left-radius: 3px;
           border-bottom-left-radius: 3px;
           width: 92%;
@@ -62,13 +62,13 @@
         }
 
         .menu-items3{
-          padding-left: 18px;
+          padding-left: 16px;
           padding: 8px;
           margin-bottom: 8px;
           position: relative;
-          font-weight: 600;
-          color: gray;
-          background-color: #f6f6f6;
+          font-weight:400;
+          color: #fff;
+          background-color: #55c500;
           border-top-left-radius: 3px;
           border-bottom-left-radius: 3px;
           width: 92%;
@@ -116,7 +116,7 @@
           }
         }
         .articles{
-              padding: 18px 0;
+              padding: 15px 0;
               border-bottom: 1px solid #eee;
                 .my_picture{
                   margin-left: 20px;
@@ -127,28 +127,18 @@
                     font-size: 12px;
                     color: #999;
                     margin: 0 0 5px 0 ;
-                    display: flex;
                   }
                   &__title{
                     display: inline-block;
-                    margin: 0 15px 0 0;
+                    margin: 0 12px 0 0;
                     line-height: 1.4;
                     font-size: 18px;
                     font-weight: 700;
                   }
                   &__tags{
-                    li{
-                      border-bottom-right-radius: 2px;
-                      border-top-right-radius: 2px;
-                      display: inline-block;
-                      line-height: 19.2px;
-                      margin-left: .7em;
-                      padding: 0 2px;
-                      color: #555!important;
-                      margin-right: 5px;
-                      background-color: #dfdfdf;
-                      font-size: 85%;
-                    }
+                    font-size: 12px;
+                    color: #999;
+                    margin: 0 0 5px 0 ;
                   }
                   &__sentence{
                     color: #999;
@@ -159,7 +149,160 @@
                 }
             }
         }
-        .a-side{
+
+        .container-body-right{
+          width: 366px;
+          height: 100%;
+          padding: 0 10px;
+          float: right;
+      }
+    }
+  }
+.a-side{
+  width: 300px;
+  margin-left: 16px;
+  padding-right: 110px;
+  float: right;
+
+  .p-home_ad{
+    height: 250px;
+    width: 300px;
+    background-color: black;
+    text-align: center;
+    font-color: white;
+  }
+
+  .ranking-user{
+    background-color: #fff;
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-style: solid;
+    border-left-width: 1px;
+    margin-bottom: 16px;
+    box-sizing: inherit;
+    display: block;
+    text-align: center;
+    border-color: #fff;
+    margin-top: 25px;
+
+    .user-header{
+      margin-bottom: 16px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      box-sizing: inherit;
+
+      .user-header-label{
+        font-size: 14px;
+        box-sizing: inherit;
+        display: block;
+      }
+    .user-list-tab{
+      display: flex;
+      box-sizing: inherit;
+
+      .user-list-tabitem1{
+        margin-right: 23px;
+        font-size: 14px;
+        font-weight: 700;
+        color: #333;
+        cursor: pointer;
+      }
+
+      //.user-list-tabitem2{
+        //margin-right: 8px;
+        //font-size: 1.2rem;
+        //color :#999;
+        //cursor: pointer;
+      //}
+
+      //.user-list-tabitem3{
+        //margin-right: 8px;
+        //font-size: 1.2rem;
+        //color :#999;
+        //cursor: pointer;
+      //}
+    }
+  }
+
+    .user-list-content{
+      padding-bottom: 8px;
+      margin-bottom: 8px;
+      border-bottom: 1px solid #e8e8e8;
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: rgb(232,232,232);
+        .ra-user{
+          display: flex;
+          //align-items: center;
+          //justify-content: space-between;
+
+          .ra-user-srart{
+            display: flex;
+            align-items: center;
+            display: inline;
+            .ra-user-icon{
+              padding-right: 16px;
+              padding-left: 16px;
+              margin-right: 8px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-shrink: 0;
+              width: 32px;
+              font-size: 1.8rem;
+               color: #999;
+              .trophy{
+                color: #ffc400;
+                display: flex;
+            }
+          }
+        }
+      }
+    }
+  }
+      .ra-user{
+        padding-bottom: 8px;
+        margin-bottom: 8px;
+        border-bottom: 1px solid #e8e8e8;
+          border-bottom-width: 1px;
+          border-bottom-style: solid;
+          border-bottom-color: rgb(232, 232, 232,);
+
+        .trophy{
+          margin: auto 0 ;
+        }
+
+        .ra-user-image{
+          padding-left: 15px
+        }
+
+        .user-name{
+          font-size: 16px;
+          word-wrap: break-word;
+          text-align: left;
+          color: #333;
+        }
+        .ra-user-count{
+          color: #333;
+          font-weight: 700;
+          padding-left: 80px;
+          font-size: 16px;
+          text-align: center;
+          display: block;
+          box-sizing: inherit;
+          .ra-user-contrib{
+            color: #999;
+            font-size: 6px;
+    }
+   }
+  }
+  }
+.a-side{
   width: 300px;
   margin-left: 16px;
   padding-right: 110px;
@@ -304,43 +447,24 @@
   }
   }
 
-        .container-body-right{
-          width: 366px;
-          height: 100%;
-          padding: 0 10px;
-          float: right;
-      }
-    }
-  }
-
-.menu-bar-trend2{
-          height: 20px;
-          width: 20px;
-        }
-
-.menu-bar-timeline{
-    height: 15px;
-    width: 15px;
-}
-
-.menu-bar-tag_feed{
-  height: 15px;
-  width: 15px;
-}
-
-.trend_view1{
-  height: 20px;
-  width: 30px;
-}
-
-.goods{
+.trend_icon3{
   height: 18px;
   width: 18px;
 }
 
-.rank{
-  height: 17px;
-  width: 17px;
+.menubar-timeline{
+height: 18px;
+width: 18px;
+}
+
+.menu-bar-tag_feed3{
+  height: 18px;
+  width: 18px;
+}
+
+.trend_view{
+  height: 20px;
+  width: 20px;
 }
 
 .articles_font{
