--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -262,7 +262,7 @@ height: 20px;
 }
 
 .main-view2{
-height: 17px;
+height: 20px;
 width: 20px;
 }
 
@@ -271,3 +271,6 @@ height: 18px;
 width: 18px;
 }
 
+.articles_font{
+  font-color: white;
+}
